added NuGet packaging artifacts

--- a/src/SmallBlockMemoryStream/SmallBlockMemoryStream.csproj
+++ b/src/SmallBlockMemoryStream/SmallBlockMemoryStream.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{97CC8BA2-A3F2-403C-9DE1-1CBD89B1EEB6}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -43,6 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmallBlockMemoryStream.cs" />
     <Compile Include="__Error.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SmallBlockMemoryStream.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
